Bug 186763 - [patch] groupdav connect to egroupware failed
Summary: [patch] groupdav connect to egroupware failed
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: http (other bugs)
Version First Reported In: 4.2.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-10 12:25 UTC by Christoph Kaulich
Modified: 2009-09-19 23:32 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
wireshark dump (10.65 KB, application/octet-stream)
2009-03-10 12:26 UTC, Christoph Kaulich
Details
Working wireshark dump (61.82 KB, application/octet-stream)
2009-03-11 12:33 UTC, Christoph Kaulich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Kaulich 2009-03-10 12:25:22 UTC
Version:           4.2.1 (using 4.2.1 (KDE 4.2.1), 4.2.1-4.fc10 Fedora)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.27.19-170.2.35.fc10.x86_64

Upgrading to KDE 4.2.1 made my Groupdav Conection to Egroupware fail. It was working for some time now, starting from KDE 4.
I will attach a wireshrk dump.
Comment 1 Christoph Kaulich 2009-03-10 12:26:25 UTC
Created attachment 31986 [details]
wireshark dump
Comment 2 Sergio Martins 2009-03-10 20:15:36 UTC
What was the last KDE version it worked in?
Comment 3 Sergio Martins 2009-03-10 20:19:28 UTC
Does comment #2, you made in bug #181568 help in this case?

There's also bug 172803 which can be related.
Comment 4 Christoph Kaulich 2009-03-10 21:19:47 UTC
the last working release was 4.2.0, i was upgrading along the kde for fedora way on a nearly daily base.

The comment from the other bug did not help, i checked this first. The third bug is a thing which can fixed in egroupware, i will contact the reporter tomorrow.
Comment 5 Christoph Kaulich 2009-03-11 12:32:03 UTC
I found a KDE 4.2 rc 1 installation over here, wher I created a dump. It is working with this release. As I can see, there seems to be some issue with the authorization.
Comment 6 Christoph Kaulich 2009-03-11 12:33:18 UTC
Created attachment 32020 [details]
Working wireshark dump

Dump created KDE 4.2 rc1, everything is working as expected
Comment 7 Christoph Kaulich 2009-03-12 13:14:00 UTC
Just reproduced it on a Suse 11.0 System with factory KDE 4.2.1.
Comment 8 Kevin Kofler 2009-03-13 12:52:39 UTC
Reassigning by request of the original submitter, who pointed out that the following kio_http changes might be the source of the regression:
> * Various authentication code improvements. See SVN commits 929627 and 
914548.
Comment 9 Christoph Kaulich 2009-03-30 11:40:36 UTC
If it would help, I can provide a test account. Please contact by email.
Comment 10 Ralf Becker 2009-05-10 10:25:08 UTC
I'm the developer of EGroupware's GroupDAV and WebDAV parts.

Only thing I notice, looking at Christoph's Wireshark traces, is GroupDAV connector / kio_http seems not to react to the Basic Auth requests from EGroupware:

HTTP/1.1 401 Unauthorized\r\n
WWW-Authenticate: Basic realm="eGroupWare CalDAV/CardDAV/GroupDAV server"\r\n
X-WebDAV-Status: 401 Unauthorized\r\n

As further request contain NO Authorization: header. While in the working trace the header is sent:

Authorization: Basic a2F1bG5jaDp5555xa2VpbnM=\r\n

I can see no fault in EGroupware's behavior to reject the requests, as we can NOT allow access without valid credentials.

I'm happy to help debugging the issue.

Ralf
Comment 11 Sebastian Voitzsch 2009-05-19 22:04:39 UTC
It doesn't work for me either (KDE 4.2.2).

When I delete the configuration files  (kresource* in .kde/share/config) and recreate it, it will (mostly) work for a day or two. Suddenly it breaks again, leaving me with "file doesn't exist" on starting kontact four times (calendar, contacts, two task files each repeat an error). Wireshark tells me the server responds with 401-Unauthorized to the client requests.

I have the same error on two different machines. Deleting the config files does only work for one machine (both with Ubuntu 9.04).

Regards,
Sebastian
Comment 12 Ralf K. 2009-07-18 14:53:55 UTC
The same for me, since KDE 4.x the GroupDAV stuff in KDEPIM is broken. KDE 3.x was fine running with eGroupware. Now, with a fresh set of config files (kresources_groupwarerc) it seems to work, but after some time everything fails. If that happens, the button "Ordnerliste aktualisieren" does not work any more, the list becomes empty.
Comment 13 Tommi Tervo 2009-08-07 09:50:09 UTC
patch by Matthew Dawson:
http://reviewboard.kde.org/r/1236/diff
Comment 14 Christoph Kaulich 2009-09-09 17:14:46 UTC
What is to be done, tio get this bug confirmed? Maybe it gets more attention afterwards?
Comment 15 Rex Dieter 2009-09-09 17:25:43 UTC
Christoph,
I can prepare a test kdelibs build for you with the aforementioned patch for testing purposes.  What version of fedora are you using?
Comment 16 Christoph Kaulich 2009-09-09 17:56:51 UTC
Fedora 11, 64 bit
Tanks a lot
Comment 17 Rex Dieter 2009-09-09 19:49:39 UTC
kdelibs-4.3.1-4: http://koji.fedoraproject.org/koji/taskinfo?taskID=1665740

(with the rest of kde-4.3.1 in fedora's updates-testing repos)
Comment 18 Gregor Burck 2009-09-09 20:04:56 UTC
may bee it is posible to build a deb for debian/SID?
Comment 19 Christoph Kaulich 2009-09-10 10:03:03 UTC
Thank you, 
I just started to use the build, looks good, I will give more feedback later.
Comment 20 Christoph Kaulich 2009-09-17 21:58:36 UTC
Hello, the fixed Fedora build is working fine, can we keep it in the next Fedora updates?
Comment 21 Rex Dieter 2009-09-17 22:07:19 UTC
We'll consider it, in the meantime, now that we have a confirmation that the patch fixes this issue, devs can eyeball it for regression/side-effect potential.
Comment 22 Matthew Dawson 2009-09-19 22:39:38 UTC
The reviewboard patch is now committed for both KDE SVN and the KDE 4.3 Branch.  The issue is no longer present (akonadi is now able to talk to egroupware without requiring a webbrowser open), so could someone please close this bug?  Thank you!
Comment 23 Rex Dieter 2009-09-19 23:32:31 UTC
ok, closing.  Thanks everyone.