Fix kio_http to be able to authenticate against a http server that returns no body with the 401 error code. This patch fixes KDE's ability to talk to eGroupware using groupdav.

BUG: 186763

svn path=/trunk/KDE/kdelibs/; revision=1025755