kioslave/http/http.cpp
@@ -4339,7 +4339,7 @@ bool HTTPProtocol::readBody( bool dataInternal /* = false */ )
     if (m_request.responseCode >= 500 && m_request.responseCode <= 599) {
       error(ERR_INTERNAL_SERVER, m_request.url.host());
       return false;
-    } else if (m_request.responseCode >= 400 && m_request.responseCode <= 499) {
+    } else if (m_request.responseCode >= 400 && m_request.responseCode <= 499 && m_request.responseCode != 401 && m_request.responseCode != 407) {
       error(ERR_DOES_NOT_EXIST, m_request.url.host());
       return false;
     }
